b=148598 Very Slow scrolling. r=rods sr=kin a=asa.  Fixed the update area for the background images.  Improves scrolling 100%